--- a/fr/calendar/chrome/calendar/calendar.properties
+++ b/fr/calendar/chrome/calendar/calendar.properties
@@ -402,8 +402,8 @@ alarmDefaultDescription=Description par défaut Mozilla
 alarmDefaultSummary=Résumé par défaut Mozilla
 
 # offline support strings (SUNBIRD ONLY)
-offlineTooltip=Vous êtes actuellement déconnecté.
-onlineTooltip=Vous êtes actuellement connecté.
+offlineTooltip=Vous êtes actuellement hors connexion.
+onlineTooltip=Vous êtes actuellement en ligne.
 
 taskDetailsStatusNeedsAction=Nécessite une action
 
