--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -100,7 +100,7 @@ compactFolderDeniedLock=Le dossier « %S » ne peut être compacté car une au
 compactFolderWriteFailed=Le dossier « %S » ne peut être compacté à cause d'une erreur d'écriture. Vérifiez qu'il reste assez d'espace disque et que vous possédez le droit d'écriture sur ce système de fichiers avant d'essayer à nouveau.
 filterFolderWriteFailed=Les messages ne peuvent être filtrés vers le dossier « %S » car il est impossible d'écrire dans ce réprtoire. Vérifiez qu'il reste assez d'espace disque et que vous possédez le droit d'écriture dans le dossier avant d'essayer à nouveau.
 copyMsgWriteFailed=Les messages ne peuvent être déplacés ou copiés vers le dossier « %S » parce que l'écriture dans le dossier a échoué. Pour récupérer de l'espace disque, à partir du menu « Fichier », choisissez d'abord « Vider la corbeille », puis « Compacter les dossiers » et essayez de nouveau.
-cantMoveMsgWOBodyOffline=Quand vous travaillez hors connexion, vous ne pouvez pas déplacer ou copier des messages qui n'ont pas été téléchargés pour une utilisation hors ligne. À partir de la fenêtre de Courrier, ouvrez le menu Fichier et choisissez Hors ligne. Décochez ensuite Travailler hors connexion, et essayez de nouveau.
+cantMoveMsgWOBodyOffline=Quand vous travaillez hors connexion, vous ne pouvez pas déplacer ou copier des messages qui n'ont pas été téléchargés pour une utilisation hors connexion. À partir de la fenêtre de Courrier, ouvrez le menu Fichier et choisissez Hors connexion. Décochez ensuite Travailler hors connexion, et essayez de nouveau.
 operationFailedFolderBusy=Impossible de compléter l'opération car un autre processus utilise le dossier. Veuillez attendre la fin de cette opération et essayer à nouveau.
 folderRenameFailed=Le dossier ne peut être renommé. Peut-être est-il en cours d'analyse ou le nouveau nom n'est pas un nom de dossier valide.
 # LOCALIZATION NOTE(verboseFolderFormat): %1$S is folder name, %2$S is server name
@@ -292,11 +292,11 @@ mailnews.search_date_leading_zeros=true
 
 # offline msg 
 nocachedbodybody=Le corps de ce message n'a pas été téléchargé depuis \
-le serveur pour une lecture hors ligne. Pour lire ce message, \
-vous devez vous reconnecter au réseau. Choisissez « Hors ligne » à partir \
+le serveur pour une lecture hors connexion. Pour lire ce message, \
+vous devez vous reconnecter au réseau. Choisissez « Hors connexion » à partir \
 du menu Fichier et ensuite décochez « Travailler hors connexion ». \
-Dans le futur, vous pourrez choisir quels messages ou dossiers sont disponibles pour une lecture hors ligne. Pour ce \
-faire, choisissez « Hors ligne » à partir du menu Fichier et ensuite choisissez « Synchroniser ». Vous pouvez aussi \
+Dans le futur, vous pourrez choisir quels messages ou dossiers sont disponibles pour une lecture hors connexion. Pour ce \
+faire, choisissez « Hors connexion » à partir du menu Fichier et ensuite choisissez « Synchroniser ». Vous pouvez aussi \
 ajuster le paramètre d'espace disque pour éviter le téléchargement de messages trop volumineux.
 
 # accountCentral
