--- a/pl/mail/chrome/messenger/accountCreationModel.properties
+++ b/pl/mail/chrome/messenger/accountCreationModel.properties
@@ -1,4 +1,4 @@
-no_emailProvider.error   = Konfiguracyjny plik XML nie zawiera konfiguracji konta email.
+no_emailProvider.error   = Konfiguracyjny plik XML nie zawiera konfiguracji konta e-mail.
 outgoing_not_smtp.error  = Serwer poczty wychodzącej musi być serwerem SMTP
 cannot_login.error       = Nie można zalogować się na serwerze. Prawdopodobnie nazwa użytkownika, hasło lub konfiguracja są niewłaściwie ustawione.
 cannot_find_server.error = Nie można odnaleźć serwera
