--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -177,17 +177,13 @@ older       = Starsze wiadomości
 
 # Grouped By Label
 untaggedMessages = Wiadomości bez etykiety
-
 # Grouped by status
 messagesWithNoStatus = Bez statusu
-
 # Grouped by priority
 noPriority = Bez priorytetu
-
 # Grouped by has attachments
 noAttachments = Bez załączników
 attachments   = Załączniki
-
 # Grouped by starred
 notFlagged   = Bez gwiazdki
 groupFlagged = Oznaczone gwiazdką
@@ -200,13 +196,6 @@ mailnews.labels.description.3 = Osobiste
 mailnews.labels.description.4 = Do zrobienia
 mailnews.labels.description.5 = Później
 
-# Format definition tag menu texts.
-# This is necessary in order to get the accesskeys to be the on the first
-# character of the menu text instead of after the menu text.
-# If a key definition exists for the tag at index n, that key's key will be taken as the accesskey, eg.
-# <key id="key_tag3" key="&tagCmd3.key;" oncommand="ToggleMessageTagKey(3);"/>
-# makes the third tag have the accesskey &tagCmd3.key;.
-# In the menuitem's label, this accesskey appears at %1$S below; %2$S will be replaced by the tag label.
 mailnews.tags.format=%1$S %2$S
 
 replied   = Odpowiedziano
@@ -324,7 +313,7 @@ errorOpenMessageForMessageIdMessage = Nie odnaleziono wiadomości o ID: %S
 
 # Warnings to alert users about phishing urls
 confirmPhishingTitle = Ostrzeżenie przed próbą oszustwa
-# %1$S is the brand name, %2$S is the host name of the url being visited
+# %1$S - brand name, %2$S is the host name of the url being visited
 confirmPhishingUrl   = %1$S uważa tę wiadomość za próbę oszustwa. Strony, do których wiodą odnośniki z tej wiadomości, mogą udawać miejsce, które chce odwiedzić użytkownik. Czy na pewno adres %2$S jest tym, który chciano odwiedzić?
 
 # Check for Updates
@@ -349,15 +338,15 @@ folderPaneHeader_recent    = Ostatnie
 folderPaneHeader_smart     = Pogrupowane
 smartAccountName           = Pogrupowane foldery
 
-#  %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
+#  %1$S - name of the folder we will move to. moveToFolderAgainAccessKey
 # should have the same value as copyToFolderAgainAccessKey as they are the same menu item in the UI
 moveToFolderAgain          = Przenieś ponownie do "%1$S"
 moveToFolderAgainAccessKey = o
-# %1$S is the name of the folder we will copy to copyToFolderAgainAccessKey
+# %1$S - name of the folder we will copy to copyToFolderAgainAccessKey
 copyToFolderAgain          = Kopiuj ponownie do "%1$S"
 copyToFolderAgainAccessKey = o
 
-# %1$S is the e-mail address of the person we will allow remote content for
+# %1$S - e-mail address of the person we will allow remote content for
 alwaysLoadRemoteContentForSender2 = Zawsze wyświetlaj zdalną zawartość w wiadomościach od %1$S
 
 # Strings for growl notifications on Mac OS X
@@ -381,7 +370,7 @@ fileNotFoundMsg   = Plik %S nie istnieje.
 fileEmptyTitle    = Pusty plik
 fileEmptyMsg      = Plik %S jest pusty.
 
-# headerFieldYou is used in the collapsed header view if the user is in the To or Cc field of a message
+# headerFieldYou is used if the user is in the To or Cc field of a message
 headerFieldYou = Ja
 
 loadingTab = Wczytywanie…
