--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -515,3 +515,6 @@ mailServerLoginFailedTitle=Identification échouée
 mailServerLoginFailed=L'identification sur le serveur %S a échoué.
 mailServerLoginFailedRetryButton=&Réessayer
 mailServerLoginFailedEnterNewPasswordButton=&Saisir un nouveau mot de passe
+
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Défaut
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Thème par défaut.
