--- a/he/mail/chrome/messenger/activity.properties
+++ b/he/mail/chrome/messenger/activity.properties
@@ -17,6 +17,7 @@ monthDate=#2 ב#1
 sendingMessage=שליחת הודעה
 # LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
 sendingMessageTo=שליחת הודעה אל %S
+copyMessage=מעתיק הודעה לתיקיית דואר נשלח
 sentMessage=הודעה נשלחה
 # LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
 sentMessageTo=הודעה נשלחה אל %S
@@ -40,8 +41,8 @@ autosyncEventStatusTextNoMsgs=אין הודעות להורדה
 autosyncContextDisplayText=מסנכרן: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=הודעה אחת נמחקה;נמחקו #1 הודעות
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=נמחקה הודעה  #1 מהתיקיה #2;נמחקו #1 הודעות מהתיקיה #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=הועברה הודעה אחת מתיקייה #2 אל #3;הועברו #1 הודעות מתיקייה #2 לתיקייה #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
