--- a/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -156,15 +156,6 @@
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
 12541=VARNING! Meddelandet är på hela %d tecken. Är du säker på att du vill skicka detta?
 
-## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Ange lösenordet för %S.
-
-## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Ange lösenordet för %S på %S:
-
-## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Kontaktar servern…
-
 ## @name NS_MSG_SENDING_MESSAGE
 12550=Skickar e-post…
 
@@ -237,9 +228,6 @@
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=Ett fel uppstod vid sändandet av e-post: Saknar lösenord för %S. Meddelandet skickades inte.
-
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=Lösenord krävs för SMTP-servern
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=Storleken på meddelandet du försöker skicka överskrider en temporär storleksrestriktion för servern. Meddelandet skickades inte. Försök minska storleken på meddelandet eller vänta en stund och försök igen. Servern svarade:  %s.
@@ -355,3 +343,11 @@ attachmentReminderOptionsMsg=Nyckelord för bilagor kan anpassas i dina inställ
 attachmentReminderYesIForgot=Javisst ja!
 attachmentReminderFalseAlarm=Nej, skicka nu
 
+## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
+## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Ange lösenordet för %S:
+## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
+## words %1$S and %2$S. Place the word %1$S where the host name should appear,
+## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Ange lösenordet för %2$S på %1$S:
+smtpEnterPasswordPromptTitle=Lösenord krävs för SMTP-servern
