--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -517,3 +517,6 @@ mailServerLoginFailedTitle=Innlogging feilet
 mailServerLoginFailed=Innlogging til %S feilet.
 mailServerLoginFailedRetryButton=&Forsøk igjen
 mailServerLoginFailedEnterNewPasswordButton=&Skriv inn nytt passord
+
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Standard
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Standard-temaet.
