--- a/he/mail/chrome/messenger/activity.properties
+++ b/he/mail/chrome/messenger/activity.properties
@@ -22,8 +22,13 @@ sentMessage=הודעה נשלחה
 # LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
 sentMessageTo=הודעה נשלחה אל %S
 failedToSendMessage=כשלון בשליחת הודעה
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=כשלון בשליחת הודעה אל %S
+#### LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
+###failedToSendMessageTo=כשלון בשליחת הודעה אל %S
+failedToCopyMessage=כשלון בהעתקת הודעה
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=כשלון בשליחת ההודעה: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=כשלון בהעתקת ההודעה: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
@@ -58,3 +63,24 @@ copiedFolder=תיקייה #1 הועתקה לתיקייה #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
 renamedFolder=תיקייה #1 שונתה לשם #2
 
+### ??? indexing=Indexing messages
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+### ??? indexingFolder=Indexing messages in #1
+### ??? indexingStatusVague=Determining which messages to index
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+### ??? indexingFolderStatusVague=Determining which messages to index in #1
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+### ??? indexingStatusExact=Indexing #1 of #2 message;Indexing #1 of #2 messages (#3% complete)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+### ??? indexingFolderStatusExact=Indexing #1 of #2 message in #4;Indexing #1 of #2 messages in #4 (#3% complete)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+### ??? indexedFolder=Indexed #1 message in #2;Indexed #1 messages in #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+### ??? indexedFolderStatus=#1 second elapsed;#1 seconds elapsed
