--- a/he/mail/chrome/messenger/filter.properties
+++ b/he/mail/chrome/messenger/filter.properties
@@ -7,6 +7,7 @@ cannotHaveDuplicateFilterTitle = שם מסנן כפול
 cannotHaveDuplicateFilterMessage = שם המסנן שהכנסת כבר קיים. אנא הכנס שם מסנן שונה.
 deleteFilterConfirmation = האם אתה בטוח שברצונך למחוק מסנן זה?
 untitledFilterName = מסנן ללא שם
+matchAllFilterName=מצא את כל ההודעות
 filterListBackUpMsg = המסננים שלך אינם פועלים משום שלא ניתן לקרוא את הקובץ msgFilterRules.dat, המכיל את המסננים שלך. קובץ msgFilterRules.dat חדש יווצר, וגיבוי של הקובץ המקורי, שיקרא rulesbackup.dat, יווצר באותה ספרייה.
 customHeaderOverflow = חרגת ממכסת 50 כותרות מותאמות אישית. אנא הסר כותרת מותאמת אישית אחת או יותר  ונסה שוב.
 filterCustomHeaderOverflow = המסננים שלך חרגו ממכסת 50 כותרות מותאמות אישית. אנא ערוך את הקובץ  msgFilterRules.dat, אשר מכיל את המסננים שלך, להשתמש בפחות כותרות מותאמות אישית .
@@ -18,6 +19,9 @@ stopButtonLabel = עצור
 continueButtonLabel = המשך
 cannotEnableFilter = נראה שמסנן זה נוצר על־ידי גרסה עתידית של Mozilla/Netscape. אינך יכול לאפשר מסנן זה משום שאיננו יודעים כיצד ליישם אותו.
 dontWarnAboutDeleteCheckbox=אל תשאל אותי שוב
+
+### TODO searchTermsInvalidTitle=Search Terms Invalid
+### TODO searchTermsInvalidMessage=This filter cannot be saved because some search terms are invalid in the current context.
 
 junkLogDetectStr = זוהתה הודעת זבל מאת %1$S - %2$S ב־%3$S
 logMoveStr = הועבר מזהה הודעה = %1$S אל %2$S
@@ -41,3 +45,9 @@ filterAction15 = גוף ההודעה נטען משרת POP3
 filterAction16 = הועתק לתיקייה
 filterAction17=מסומן
 filterAction18=התעלם משרשור
+
+# LOCALIZATION NOTE(filterAutoNameStr)
+# %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
+# %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
+# %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=%1$S %2$S: %3$S
