--- a/he/mail/chrome/messenger/imapMsgs.properties
+++ b/he/mail/chrome/messenger/imapMsgs.properties
@@ -51,18 +51,18 @@
 5013 = שולח מידע התחברות...
 5014 = שולח מידע התחברות מאומתת...
 5015 = מוריד הודעה...
-5020 = בודק מרחב שמות של IMAP...
-5021 = "שרת הדואר מראה שיתכן ואין לך תיקיות דואר אישיות כלל. אנא בדוק את המינויים שלך.
-5024 = תיקיות אשר לא תרשם כמנוי עליהן לא יופיעו ברשימות התיקיות שלך, אך ניתן להרשם כמנוי עליהן מאוחר יותר על־ידי בחירת קובץ / הרשם כמנוי.
-5026 = אנא בחר אילו תיקיות ברצונך לרשום כמנויות בחלון הרשם כמנוי...
-5028 = השידרוג הסתיים בהצלחה.
+### 5020 = בודק מרחב שמות של IMAP...
+### 5021 = "שרת הדואר מראה שיתכן ואין לך תיקיות דואר אישיות כלל. אנא בדוק את המינויים שלך.
+### 5024 = תיקיות אשר לא תרשם כמנוי עליהן לא יופיעו ברשימות התיקיות שלך, אך ניתן להרשם כמנוי עליהן מאוחר יותר על־ידי בחירת קובץ / הרשם כמנוי.
+### 5026 = אנא בחר אילו תיקיות ברצונך לרשום כמנויות בחלון הרשם כמנוי...
+#### 5028 = השידרוג הסתיים בהצלחה.
 5029 = מקבל ACL של התיקייה...
 5030 = מקבל מידע על תצורת שרת...
 5031 = מקבל מידע על תצורת תיבת דואר...
 5032 = חלק גוף זה יורד לפי דרישה.
-5033 = שגיאת IMAP: לא ניתן לשמור את ההודעה עקב שגיאה.
-5034 = שגיאת IMAP: לא ניתן לאחזר מידע של התיקייה המקוונת.
-5035 = התחברות לשרת %S נכשלה.
+### 5033 = שגיאת IMAP: לא ניתן לשמור את ההודעה עקב שגיאה.
+### 5034 = שגיאת IMAP: לא ניתן לאחזר מידע של התיקייה המקוונת.
+### 5035 = התחברות לשרת %S נכשלה.
 5036 = %S מוריד כותרות הודעות %lu מתוך %lu
 5037 = %S מוריד דגלי הודעות %lu מתוך %lu
 5038 = מוחק הודעות...
@@ -71,7 +71,7 @@
 5041 = מעביר הודעה אל %S...
 5042 = מעתיק הודעות אל %S...
 5043 = מעתיק הודעה אל %S...
-5044 = פותח תיקייה %S...
+### 5044 = פותח תיקייה %S...
 5045 = %S - מוריד הודעה %lu מתוך %lu
 5046 = נמצאה תיקייה: %S
 5047 = הכנס את הסיסמה שלך עבור %S:
@@ -108,10 +108,10 @@
 5080 = צור תת־תיקייה
 5081 = מחק הודעות
 5082 = נהל תיקייה
-5083 = לא מוכר
+### 5083 = לא מוכר
 5084 = שרת זה לא תומך בתיקיות משותפות.
 5090 = השרת %S התנתק. יתכן שהשרת נפל או שיש בעית רשת.
-5091 = התחברות נכשלה.
+### 5091 = התחברות נכשלה.
 5092 = האם ברצונך להירשם כמנוי על %1$S?
 5093 = לא ניתן להתחבר אל שרת ה־IMAP שלך. יתכן ועברת את המספר המירבי של חיבורים אל שרת זה. אם זה המצב, השתמש בתיבת הדו שיח הגדרות שרת IMAP מתקדמות כדי להוריד את מספר החיבורים במטמון.
 5095 = מידע אודות המיכסה אינו זמין שכן התיקייה אינה פתוחה.
@@ -120,7 +120,7 @@
 5100 = אזל הזיכרון ליישום.
 5102 = לא ניתן להתחבר אל %S משום שאיפשרת אימות מאובטח, ושרת זה אינו תומך בו.\n\nכדי להתחבר, כבה את האימות המאובטח עבור חשבון זה.
 5103 = מעתיק הודעה %1$S מתוך %2$S אל %3$S
-5104 = לא ניתן להתחבר אל %S משום שהשרת לא איפשר התחברות. יתכן ויהיה עליך להתחבר דרך SSL או TLS. אנא בדוק את הגדרות החשבון עבור שרת הדואר שלך.
+### 5104 = לא ניתן להתחבר אל %S משום שהשרת לא איפשר התחברות. יתכן ויהיה עליך להתחבר דרך SSL או TLS. אנא בדוק את הגדרות החשבון עבור שרת הדואר שלך.
 
 
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
@@ -146,3 +146,8 @@
 ## @name IMAP_ACL_EXPUNGE_RIGHT
 ## @loc None
 5085=מחק
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109 = לא ניתן להתחבר אל %S מאחר והשרת לא מאפשר הזדהות טקסטואלית ללא STARTTLS או SSL/TLS. נסה לאפשר חיבור מאובטח או הזדהות מאובטחת בהגדרות החשבון. 
