--- a/he/mail/chrome/messenger/search-attributes.properties
+++ b/he/mail/chrome/messenger/search-attributes.properties
@@ -1,50 +1,41 @@
-0 = נושא
-1 = מאת
-2 = גוף
-3 = תאריך
-4 = עדיפות
-5 = מצב
-6 = אל
-7 = עותק
-8 = אל או עותק
-9 = מיקום
-10 = מפתח הודעה
-11 = גיל בימים
-12 = מידע על התיקייה
-13 = גודל
-14 = כל טקסט
-15 = מילות מפתח
-16 = כל שם
-17 = שם תצוגה
-18 = כינוי
-19 = שם מסך
-20 = דוא״ל
-21 = דוא״ל נוסף
-22 = כל מספר
-23 = טלפון בעבודה
-24 = טלפון בבית
-25 = פקס
-26 = איתורית
-27 = נייד
-28 = עיר
-29 = רחוב
-30 = תפקיד
-31 = ארגון
-32 = מחלקה
-33 = reserved for AB
-34 = reserved for AB
-35 = reserved for AB
-36 = reserved for AB
-37 = reserved for AB
-38 = reserved for AB
-39 = reserved for AB
-40 = reserved for AB
-41 = reserved for AB
-42 = reserved for AB
-43 = reserved for AB
-44 = reserved for AB
-45 = reserved for AB
-46 = מצב נספחים
-47 = מצב הזבל
-48 = תוית
-49 = התאמה אישית...
+#these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
+#and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
+Subject=נושא
+From=מאת
+Body=גוף
+Date=תאריך
+Priority=דחיפות
+Status=מצב
+To=עבור
+Cc=עותק
+ToOrCc=עבור או עותק
+AgeInDays=גיל בימים
+SizeKB=גודל (ק״ב)
+Tags=Tags
+# for AB and LDAP
+AnyName=כל שם
+DisplayName=שם תצוגה
+Nickname=כינוי
+ScreenName=שם מסך
+Email=דוא״ל
+AdditionalEmail=כתובת דוא״ל נוספת
+AnyNumber=כל מספר
+WorkPhone=טלפון בעבודה
+HomePhone=טלפון בבית
+Fax=פקס
+Pager=זימונית
+Mobile=נייד
+City=עיר
+Street=רחוב
+Title=תואר
+Organization=ארגון
+Department=מחלקה
+# more mailnews
+FromToCcOrBcc=מאת, עבור, עותק, עותק נסתר
+JunkScoreOrigin=מקור ניקוד זבל
+JunkPercent=אחוז זבל
+AttachmentStatus=מצב קובץ מצורף
+JunkStatus=מצב זבל
+Label=תווית
+Customize=מותאם אישית…
+MissingCustomTerm=מונח מותאם אישית חסר
