--- a/he/mail/chrome/messenger/search-operators.properties
+++ b/he/mail/chrome/messenger/search-operators.properties
@@ -7,8 +7,8 @@
 5=בא לפני
 6=בא אחרי
     
-7=גבוהה מאשר
-8=נמוכה מאשר
+7=גבוה מאשר
+8=נמוך מאשר
 
 9=מתחיל עם
 10=מסתיים עם
@@ -23,3 +23,6 @@
 16=נמצא בפנקס הכתובות שלי
 17=לא נמצא בפנקס הכתובות שלי
 18=לא ריק
+
+19=זהה
+20=לא זהה
