--- a/he/mail/chrome/messenger/search.properties
+++ b/he/mail/chrome/messenger/search.properties
@@ -10,7 +10,6 @@
 
 # filter stuff
 
-
 searchingMessage = מחפש…
 searchSuccessMessage = נמצאה התאמה אחת
 searchSuccessMessages = נמצאו %S התאמות
@@ -22,3 +21,7 @@ labelForSearchButton.accesskey = ח
 
 moreButtonTooltipText = הוסף מסנן חדש
 lessButtonTooltipText = הסר מסנן זה
+
+# LOCALIZATION NOTE (glodaSearchTabTitle): The title to use for global database
+#  search tabs.  Include "%S" where you want the search string to be inserted.
+glodaSearchTabTitle=חיפוש: %S
