--- a/he/mail/chrome/messenger/accountCreationUtil.properties
+++ b/he/mail/chrome/messenger/accountCreationUtil.properties
@@ -5,7 +5,9 @@
 # sanitizeDatatypes.js
 hostname_syntax.error=שם שרת מארח ריק או מכיל תווים אסורים. מותרים רק אותיות, מספרים, והתווים '-' ו־'.'.
 alphanumdash.error=מחרוזת כוללת תווים לא נתמכים. מותרים רק אותיות, מספרים, והסימנים '-' ו־'_'.
-enum_value.error=ערך enum לא נתמך
+### enum_value.error=ערך enum לא נתמך
+allowed_value.error=הערך שסופק אינו ברשימה המותרת.
+
 url_scheme.error=תבנית URL לא מותרת
 url_parsing.error=URL לא מזוהה
 string_empty.error=אתה חייב לספק ערך למחרוזת זו
